Small tweak to placing of code labels, still not perfect.

--- a/packages/codehighlight.sty
+++ b/packages/codehighlight.sty
@@ -24,7 +24,7 @@
 
 %\setbeamercolor{background canvas}{bg=red!10!}
 
-\newcommand{\codetitlestyle}[1]{\small \textit{#1}}
+\newcommand{\codetitlestyle}[1]{\small\textit{#1}\hspace{0.1cm}}
 \newcommand{\belowtitleskip}{2pt}%\smallskipamount}
 \newcommand{\captionposition}{t}
 
@@ -115,9 +115,9 @@ backgroundcolor=\color{yellow!10}
 %}
 }
 
-\newcommand{\inputpython}[1]{\lstinputlisting[style=pythonstyle, title={\codetitlestyle{Python code}}, belowcaptionskip=\belowtitleskip]{#1}}
+\newcommand{\inputpython}[1]{\lstinputlisting[style=pythonstyle, title={\codetitlestyle{Python code }}, belowcaptionskip=\belowtitleskip]{#1}}
 
-\lstnewenvironment{python}[1][]{\lstset{style=pythonstyle, title={\codetitlestyle{Python code}}, belowcaptionskip=\belowtitleskip}}{}
+\lstnewenvironment{python}[1][]{\lstset{style=pythonstyle, title={\codetitlestyle{Python code }}, belowcaptionskip=\belowtitleskip}}{}
 \newcommand{\pyth}{\lstinline[style=pythonstyle, basicstyle=\ttfamily]}
 
 \lstdefinestyle{cppstyle}{
