--- a/unfinished/mardal-2/chapter.tex
+++ b/unfinished/mardal-2/chapter.tex
@@ -4,7 +4,7 @@
               {mardal-2}
 
 
-This chapter describes decisions made and lessons learnt
+This chapter describes decisions made and lessons learned
 in the implementation of PyDOLFIN. The chapter is quite technical, since
 we aim at giving the reader a thorough understanding of the implementation
 of PyDOLFIN. 
@@ -26,11 +26,11 @@ the Python interface also introduces additional complexity and new
 problems.  We assume that the reader has basic knowledge of both C++
 and Python. A suitable textbook on Python for scientific computing is
 \cite{Langtangen2008}, which cover both Python and its C interface.
-SWIG is well documented and we refer to the user manual that can be
+SWIG, which is the software we use to wrap \dolfin, is well documented and we refer to the user manual that can be
 found on its web page~\cite{www:swig}. Finally, we refer to
 \citet{Langtangen2003b} and \citet{SalaSpotzHeroux2008} for a
 description of how SWIG can be used to generate Python interfaces for
-the other packages Diffpack and Trilinos.
+other packages such as Diffpack and Trilinos.
 
 
 \section{Using SWIG}
@@ -39,10 +39,10 @@ Python and C++ are two very different languages, while Python is
 user--friendly and flexible, C++ is very efficient. 
 To combine the strengths of the two languages, it has become common
 to equip C++ (or FORTRAN/C) libraries with Python interfaces. 
-Such interfaces must comply the \citet{www:python-capi}.   
+Such interfaces must comply with the \citet{www:python-capi}.   
 Writing such interfaces, often called wrapper code, is quite involved.
 Therefore, a number of wrapper code generators have been developed in the
-recent years, some examples are   
+recent years, some examples are
  \citet{Peterson}, \citet{SIP}, \citet{Siloon}, and \citet{www:swig}. 
  SWIG has been used to create PyDOLFIN and will therefore be in focus in
  this chapter. SWIG is a mature wrapper code generator that support many languages and is extensively documented.
@@ -50,9 +50,9 @@ recent years, some examples are
 \subsection{Basic SWIG}
 To get a basic understanding of SWIG, we consider  an implementation of an array class. 
 Let the array class be defined in \emp{Array.h} as follows:
-\lstinputlisting[style=mycpp]{chapters/mardal-2/code/Array.h}
+\inputcpp{chapters/mardal-2/code/Array.h}
 A first attempt to make the Array accessible in Python using SWIG, is to write a SWIG interface file \emp{Array\_1.i}.
-\lstinputlisting[style=mycpp]{chapters/mardal-2/code/Array_1.i}
+\inputswig{chapters/mardal-2/code/Array_1.i}
 Here, we specify the name of the Python module: \emp{Array}; the code
 that should be inlined in the wrapper code directly (the declarations):
 \emp{\#include "Array.h"}; and the code SWIG should parse to create the wrapper code: \emp{\%include "Array.h"} (definitions). The following command shows how to run SWIG to produce the wrapper code:
@@ -64,12 +64,12 @@ The command generates two files: \emp{Array.py} and
 \emp{Array\_}\emp{wrap.cxx} contains C code that defines the Python
 interface of Array.  After \emp{Array\_wrap.cxx} is compiled into a
 shared library, it can be imported into Python. 
-The file \emp{Array.py} is written in pure Python.  It imports the shared library and may add some
-functionality to the Python module. 
+The file \emp{Array.py} is written in pure Python. It imports the shared library and also adds some
+functionality to the wrapped module. 
 The reader should be able to recognize the Python class \emp{Array} at the end of the \emp{Array.py} file. 
 
 The following \citet{www:distutils} file (\emp{setup.py}) executes the SWIG command above and compiles and links the source code and the generated wrapper code into a shared library.
-\lstinputlisting[style=mypython]{chapters/mardal-2/code/setup.py}
+\inputpython{chapters/mardal-2/code/setup.py}
 Build and install the module in the current working directory with the
 command:
 \begin{bash}
@@ -84,7 +84,7 @@ However, a number of issues appear:
 \begin{enumerate}
 \item the \emp{operator[]} does not work;
 \item the \emp{operator+=} returns a new Python object (with different \emp{id});
-\item printing does not use the \emp{std::ostream \& operator<<};%>> Put here so emacs highlighting wont go bananas
+\item printing does not use the \emp{std::ostream \& operator<{}<};%>> Put here so emacs highlighting wont go bananas
 \item the \emp{Array(int n\_, double* a\_);} constructor is not working properly.%  neither is the overloading of the same method working.
 \end{enumerate}
 We see that a number of different problems arise even in such a simple
@@ -94,20 +94,20 @@ each of the above issues. The example code with the solutions proposed in
 the following can be found in \emp{Array\_2.i}. 
 
 \subsection{The \emp{operator[]}}
-In C++ the subscripting \emp{operator[]} is used to implement both set and get
+In C++ the sub scripting \emp{operator[]} is used to implement both set and get
 operators. It is possible to distinguish the set operator from the get
 operator using \emp{const}, but this is not required.  
-In Python subscripting is performed with the two special methods: \emp{\_\_setitem\_\_} and \emp{\_\_getitem\_\_}. 
+In Python sub scripting is performed with the two special methods: \emp{\_\_setitem\_\_} and \emp{\_\_getitem\_\_}. 
 Since, the mapping between the Python operators 
 (\emp{\_\_setitem\_\_} and \emp{\_\_getitem\_\_}) and the C++ operators \emp{operator[]} 
 may be ambiguous, SWIG currently ignores these operators. 
 To implement the operators properly, also in future versions of SWIG, we ignore both version of the \emp{operator[]} with
-\begin{c++}
+\begin{swigcode}
 %ignore Array::operator[];
-\end{c++}
-and extend the interface with the auxiliary 
+\end{swigcode}
+and extend the interface of the generated C++ code with the auxiliary 
 \emp{\_\_setitem\_\_} and \emp{\_\_getitem\_\_} methods: 
-\begin{c++}
+\begin{swigcode}
 %extend Array {
 double __getitem__(int i) {
   return (*self)[i];
@@ -118,7 +118,7 @@ void __setitem__(int i, double v) {
 }
 ...
 };
-\end{c++}
+\end{swigcode}
 Note that all SWIG directives start with '\emp{\%}'.
 Furthermore, the access to the actual instance is provided by the
 \emp{self} pointer, which in this case is a C++ pointer that points to an
@@ -137,9 +137,9 @@ object. An instance of a SWIG generated class therefore keeps a reference
 to the underlying C++ object. The default behavior is that the C++ object is destroyed together 
 with the Python object. This behavior is not consistent with the
 \emp{operator +=} returning a new object, which is illustrated 
-by the segmentation fault in the following example 
+by the generated segmentation fault in the following example 
 (see \emp{segfault\_test.py}):
-\lstinputlisting[style=mypython]{chapters/mardal-2/code/segfault_test.py}
+\inputpython{chapters/mardal-2/code/segfault_test.py}
 This script produces the following output:
 \begin{python}
 id(a): 3085535980
@@ -162,7 +162,7 @@ is therefore deleted together with the underlying C++ object when \emp{add} has 
 The memory problem can be solved by extending the interface with
 an \emp{\_add} method and implementing our own \emp{\_\_iadd\_\_} method in
 terms of \emp{\_add}, using the \emp{\%extend} directive:
-\begin{c++}
+\begin{swigcode}
 %extend Array {
 ...
   void _add(const Array& a){
@@ -176,17 +176,17 @@ terms of \emp{\_add}, using the \emp{\%extend} directive:
   %}
 ...
 };
-\end{c++}
+\end{swigcode}
 The above script will now report the same \emp{id} for all objects. 
 No objects are created or deleted, and segmentation fault is avoided.
 
-\subsection{ \emp{std::ostream \& operator<<}}%>>
+\subsection{ \emp{std::ostream \& operator<{}<}}%>>
 In C++, shift operators such as \emp{operator <<} are typically used to implement I/O, while in
 Python the \emp{\_str\_} method is used.    
 Therefore, SWIG ignores the shift operator, as it is likely not to perform as intended. 
 However, we can again use the \emp{\%extend} directive to make this
 operator available from Python by adding a  \emp{\_\_str\_\_} method.
-\begin{c++}
+\begin{swigcode}
 %include <std_string.i>
 
 %extend Array {
@@ -197,8 +197,8 @@ operator available from Python by adding a  \emp{\_\_str\_\_} method.
     return s.str();
   }
 };
-\end{c++}
-This method uses the \emp{operator<<} %>>
+\end{swigcode}
+This method uses the \emp{operator<{}<} %>>
 to pipe the stream representation of the array to a
 \emp{std::ostringstream} and then returns a \emp{std::string}
 representation of the stream.
@@ -209,13 +209,13 @@ In Python, we can then call \emp{print} on an instance of \emp{Array}.
 The fourth problem is related to pointer handling in C/C++ and SWIG. From
 the constructor signature alone, it is not clear whether \emp{double* a\_} points to a single value or to the first element of an array.
 Therefore, SWIG takes a conservative approach and handles pointers as
-pointers. This leads to the erroneous behaviour of the constructor in the
-above example, where  \emp{double* a\_} points to the first element of an array of length \emp{n}. 
+pointers to single values. In our example \emp{double* a\_} points to the first element of an array of length \emp{n}, and SWIG erroneously generates code for passing an \emp{int} and a \emp{double} to the method. 
+
 As a remedy, SWIG provides the \emp{typemap} concept to enable mappings
 between C/C++ and Python types. The following code, explained in detail
 below, demonstrates how to map a \numpy array to the \emp{(int n\_, double* a\_)} 
 arguments in the constructor.
-\begin{c++}
+\begin{swigcode}
 %typemap(in) (int n_, double* a_){
   if (!PyArray_Check($input)) {
     PyErr_SetString(PyExc_TypeError, "Not a NumPy array");
@@ -229,9 +229,9 @@ arguments in the constructor.
   $1 = PyArray_DIM(pyarray,0);
   $2 = static_cast<double*>(PyArray_DATA(pyarray));
 }
-\end{c++}
+\end{swigcode}
 The first line specifies that the typemap should be applied to the input
-\emp{(in)} arguments of operators, functions, and methods with 
+\emp{(in)} arguments of operators, functions, and methods with the 
 \emp{int n\_,double* a\_} arguments in the signature. 
 The \$ prefixed variables are used to map input and output variables in the typemap; 
 that is, the variables \$1 and \$2 map to the first and second output C
@@ -251,11 +251,11 @@ a process which is called dynamic dispatch.
 To generate proper wrapper code, 
 SWIG relies on \emp{\%typecheck} directives to resolve the overloading. 
 A suitable typecheck for our example typemap is:
-\begin{c++}
+\begin{swigcode}
 %typecheck(SWIG_TYPECHECK_DOUBLE_ARRAY) (int n_, double* a_) {
    $1 = PyArray_Check($input) ? 1 : 0;
  }
-\end{c++}
+\end{swigcode}
 Here, \emp{SWIG\_TYPECHECK\_DOUBLE\_ARRAY} is a \emp{typedef} for the priority number assigned for arrays of doubles. The typecheck should return 1 if the Python object \emp{\$input} has the correct type, and 0 otherwise.
 \section{SWIG and PyDOLFIN}
 To make PyDOLFIN more \textit{Pythonic}, we have made a number of
@@ -268,26 +268,26 @@ library, and \textit{ii)} kernel module files that apply to specific
 \dolfin modules. The latter files are divided into \emp{$\ldots$\_pre.i}
 and \emp{$\ldots$\_post.i} files, which are applied before and after the
 inclusion of the header files of the particular kernel module, respectively. 
-The kernel modules (\emp{kernel\_module.i} mirror the structure of \dolfin: \emp{common}, \emp{parameters}, \emp{la}, \emp{mesh} and so forth. The global interface files are all included in \emp{dolfin.i}, the main SWIG interface file. The kernel module interface files are included, together with the C++ header files, in the automatically generated \emp{kernel\_modules.i} file.
+The kernel modules, as seen in \emp{kernel\_module.i}, mirror the directory structure of \dolfin: \emp{common}, \emp{parameters}, \emp{la}, \emp{mesh} and so forth. The global interface files are all included in \emp{dolfin.i}, the main SWIG interface file. The kernel module interface files are included, together with the C++ header files, in the automatically generated \emp{kernel\_modules.i} file.
 
 The following sections deal with the main
 interface file of \emp{dolfin.i} and address the global interface files. Then we will address some issues in the module specific interface files.
 
 \subsection{\emp{dolfin.i} and the \emp{cpp} module}
 The file \emp{dolfin.i} starts by defining the name of the generated Python module.
-\begin{c++}
+\begin{swigcode}
 %module(package="dolfin", directors="1") cpp
-\end{c++}
+\end{swigcode}
 This statement tells SWIG to create a module called \emp{cpp} that resides
 in the package of \emp{dolfin}. We have also enabled the use of directors.
 The latter is required to be able to subclass \dolfin classes in Python,
-and issue that will be discussed below.  By naming the generated extension module
+an issue that will be discussed below.  By naming the generated extension module
 \emp{cpp}, and including it in the \emp{dolfin} Python package, we hide the generated interface into a sub module of dolfin; the \emp{dolfin.cpp} module. 
 The \emp{dolfin} module then imports the needed classes and functions 
-from \emp{dolfin.cpp} in the \emp{\_\_init\_\_.py} file along with  pure Python classes and functions. 
+from \emp{dolfin.cpp} in the \emp{\_\_init\_\_.py} file along with additional pure Python classes and functions.
 
-The next two blocks of \emp{dolfin.i} defines code that will be inserted into the SWIG generated C++ wrapper file.
-\begin{c++}
+The next two blocks of \emp{dolfin.i} define code that will be inserted into the SWIG generated C++ wrapper file.
+\begin{swigcode}
 %{
 #include <dolfin/dolfin.h>
 #define PY_ARRAY_UNIQUE_SYMBOL PyDOLFIN
@@ -297,7 +297,7 @@ The next two blocks of \emp{dolfin.i} defines code that will be inserted into th
 %init%{
 import_array();
 %}
-\end{c++}
+\end{swigcode}
 SWIG inserts code that resides in a \emp{\%\{$\ldots$\}\%} block, verbatim
 at the top of the generated C++ wrapper file. Note that
 \emp{\%\{$\ldots$\}\%} is short for \emp{\%header\%\{$\ldots$\}\%}. Hence,
@@ -314,29 +314,27 @@ at different positions.
 In the previous example dealing with \emp{operator+=}, we saw that it is
 important to prevent premature destruction of underlying C++ objects. A
 nice feature of SWIG is that we can declare that a wrapped class shall
-store the underlying C++ object using a shared pointer \emp{shared\_ptr}, instead of a raw
+store the underlying C++ object using a shared pointer (\emp{shared\_ptr}), instead of a raw
 pointer. By doing so, the underlying C++ object is not explicitly deleted
 when the reference count of the Python object reach zero, instead the
-reference count on the \emp{shared\_ptr} is decreased. \dolfin provides a
-\emp{shared\_ptr} interface for some crucial classes, which interact
-seamlessly with the \emp{shared\_ptr} stored C++ objects in \dolfin. 
+reference count on the \emp{shared\_ptr} is decreased.
 
-Shared pointers are provided by the the \emp{boost\_shared\_ptr.i} file. 
+Shared pointers are provided by the \emp{boost\_shared\_ptr.i} file. 
 This file declares two user macros: \emp{SWIG\_}\-\emp{SHARED\_}\-\emp{PTR}
 and \emp{SWIG\_}\-\emp{SHARED\_PTR\_}\-\emp{DERIVED}\footnote{In SWIG
-version 2.0 and above, these macros are superseeded by the single
+version 2.0 and above, these macros are super seeded by the single
 \emp{\%shared\_ptr} directive.}. These macros must be called for each class we
 want shared pointers.  In PyDOLFIN this is done in the \emp{shared\_ptr\_classes.i} file. 
 Note that the macros also declare typemaps for passing a
 \emp{shared\_ptr} stored object to method that expects a reference or
 a pointer. This means that the typemap pass a
 de-referenced \emp{shared\_ptr} to the function. This behavior can lead to
-unintentional trouble because the \emp{shared\_ptr} mechanism is circumventeded.
+unintentional trouble because the \emp{shared\_ptr} mechanism is circumvented.
 
 In \dolfin, instances of some crucial classes are stored internally with
 \emp{shared\_ptr}s. These classes also uses \emp{shared\_ptr} in the Python
 interface. When objects of these classes are passed as arguments to methods
-or constructors in \dolfin, two versions are needed: a \emp{shared\_ptr} and a reference version. The following code snippet illustrates two constructors of \emp{Function}, each taking a \emp{FunctionSpace} as an argument\footnote{Instances of \emp{FunctionSpace} are stored using \emp{shared\_ptr} in the \dolfin C++ library.}:
+or constructors in C++, two versions are needed: a \emp{shared\_ptr} and a reference version. The following code snippet illustrates two constructors of \emp{Function}, each taking a \emp{FunctionSpace} as an argument\footnote{Instances of \emp{FunctionSpace} are internally stored using \emp{shared\_ptr} in the \dolfin C++ library.}:
 \begin{c++}
 /// Create function on given function space
 explicit Function(const FunctionSpace& V);
@@ -352,9 +350,9 @@ unfortunately pick the first constructor and the \emp{FunctionSpace} is
 passed without increasing the reference count of the \emp{shared\_ptr}.
 This undermines the whole concept of \emp{shared\_ptr}. To prevent this
 faulty behavior, we ignore the reference constructor (see \emp{function\_pre.i}):
-\begin{c++}
+\begin{swigcode}
  %ignore dolfin::Function::Function(const FunctionSpace&);
-\end{c++}
+\end{swigcode}
 
 \subsection{Typemaps}
 Most types in the \emp{kernel\_module.i} file are wrapped nicely
@@ -369,15 +367,15 @@ std\_vector-typemaps. These are implemented in the interface files:
 In \emp{typemaps.i}, typemaps for four different basic types are defined. In- and out-typemaps for \emp{dolfin::uint}, and \emp{dolfin::real}, an in-typemap for \emp{int}, and an out-typemap macro for \emp{std::pair<}\-\emp{dolfin::uint,}\-\emp{dolfin::uint>}.
 
 The simplest typemap is an out-typemap for \emp{dolfin::uint}, which is needed since Python does not have \emp{unsigned int}:
-\begin{c++}
+\begin{swigcode}
 %typemap(out) dolfin::uint = int;
-\end{c++}
+\end{swigcode}
 This typemap specifies that a function returning a \emp{dolfin::uint}
 should use the built-in out-typemap for \emp{int}. SWIG lets us reuse a
 typemap by simply copying it. We could have used the same feature for the
 corresponding in-typemap, however an unfortunate bug, explained below,  
 forces us to implement the whole typemap from scratch. The typemap looks like this:
-\begin{c++}
+\begin{swigcode}
 %typemap(in) dolfin::uint
 {
   if (PyInteger_Check($input))
@@ -391,14 +389,14 @@ forces us to implement the whole typemap from scratch. The typemap looks like th
   else
     SWIG_exception(SWIG_TypeError, "expected positive 'int' for argument $argnum");
 }
-\end{c++}
+\end{swigcode}
 %$ to fool emacs highlight...
 The typemap has the same structure as the \numpy typemap above. We first
 check that the object is of integer type, with the
 \emp{PyInteger\_}\emp{Check} function. Here, we have implemented the
 \emp{PyInteger\_}\emp{Check} function ourselves instead of using the 
 Python  macro \emp{PyInt\_Check}. The reason is that
-\emp{PyInt\_Check} can not be combined with \numpy, which is the above
+\emp{PyInt\_Check} in Python2.6 can not be combined with \numpy, which is the above
 mentioned bug. Next, we convert the Python integer to a \emp{long} and
 check whether it is positive. Finally, we assign the input argument \$1 to
 a \emp{dolfin::uint} casted version of the value. If either of these checks
@@ -413,12 +411,13 @@ creates  more understandable error message.
 %which is almost a copy of the \emp{uint} typemap and therefore not presented here.
 Finally, we present the out-typemap for
 \emp{std::pair}\-\emp{<dolfin::uint,}\-\emp{dolfin::uint>},  
-which returns a Python tuple of two integers:\begin{c++}
+which returns a Python tuple of two integers:
+\begin{swigcode}
 %typemap(out) std::pair<dolfin::uint,dolfin::uint>
 {
   $result = Py_Build Value("ii",$1.first,$1.second);
 }
-\end{c++}
+\end{swigcode}
 %$ here to fool emacs highlightings
 This is an example of a short and comprehensive typemap. It uses the Python C-API function \emp{Py\_BuildValue} to build a tuple of the two values in the \emp{std::pair} object.
 
@@ -431,9 +430,9 @@ Instead of writing one typemap for each primitive type, we defined a SWIG
 macro, which is called with different types as argument. Using macros may
 produce a lot of code as some of these typemaps are used frequently. To
 avoid code bloat, most of the typemap code is place in the function
-\emp{convert\_numpy\_to\_}, which is called
-by typemap. The entire macro reads:
-\begin{c++}
+\emp{convert\_numpy\_to\_}\-\emp{ \#\# TYPE\_NAME \#\#}\-\emp{ \_array\_no\_check}\footnote{\emp{ \#\# TYPE\_NAME \#\# } is a SWIG macro directive that will be expanded to the value of the \emp{TYPE\_NAME} macro argument.}, which is called
+by the actual typemap. The entire macro reads:
+\begin{swigcode}
 %define UNSAFE_NUMPY_TYPEMAPS(TYPE,TYPE_UPPER,NUMPY_TYPE,TYPE_NAME,DESCR)
 %{
 SWIGINTERN bool convert_numpy_to_ ## TYPE_NAME ## _array_no_check(PyObject* input, TYPE*& ret)
@@ -465,7 +464,7 @@ if (!convert_numpy_to_ ## TYPE_NAME ## _array_no_check($input,$1))
 
 %apply TYPE* {TYPE* _array}
 %enddef
-\end{c++}
+\end{swigcode}
 The first line defines the signature of the macro. The macro is called using 5 arguments:
 \begin{enumerate}
 \item \emp{TYPE} is the name of the primitive type. Examples are 
@@ -480,18 +479,18 @@ Examples are \emp{uint} and \emp{double}.
 type. Examples are \emp{'I'} and \emp{'d'}.
 \end{enumerate}
 We can then call the macro to instantiate the typemaps and typechecks.
-\begin{c++}
+\begin{swigcode}
 UNSAFE_NUMPY_TYPEMAPS(dolfin::uint,INT32,NPY_UINT,uint,I)
 UNSAFE_NUMPY_TYPEMAPS(double,DOUBLE,NPY_DOUBLE,double,d)
-\end{c++}
+\end{swigcode}
 Here, we have instantiated the typemap for a \emp{dolfin::uint} and a
 \emp{double} array. The above typemap does not check the length of the handed \numpy array 
 and is therefore unsafe. Corresponding safe typemaps can also be found in
 \emp{numpy\_typemaps.i}. 
 The typemap function in the third line of the typemap
-\begin{c++}
+\begin{swigcode}
   SWIGINTERN bool convert_numpy_to_ ## TYPE_NAME ## _array_no_check(PyObject* input, TYPE*& ret)
-\end{c++}
+\end{swigcode}
 takes a pointer to a \emp{PyObject} as input. This function returns
 \emp{true} if the conversion is successful and \emp{false} otherwise. The
 converted array will be returned by the \emp{TYPE*\& ret} argument. 
@@ -512,12 +511,12 @@ handed \dolfin objects may and may not be stored using a \emp{shared\_ptr},
 we provide a  typemap that works for both situations. 
 We also create typemaps for signatures where \emp{const} are used. 
 Typically a signature can look like:
-\begin{c++}
+\begin{swigcode}
 {const} std::vector<{const} dolfin::TYPE *>
-\end{c++}
+\end{swigcode}
 where \emp{const} is optional. 
 To handle the optional \emp{const}s we use nested macros:  
-\begin{c++}
+\begin{swigcode}
 %define IN_TYPEMAPS_STD_VECTOR_OF_POINTERS(TYPE)
 // Make SWIG aware of the shared_ptr version of TYPE
 %types(SWIG_SHARED_PTR_QNAMESPACE::shared_ptr<TYPE>*);
@@ -556,11 +555,18 @@ IN_TYPEMAP_STD_VECTOR_OF_POINTERS(TYPE,const,const)
         newmem = 0;
         res = SWIG_ConvertPtrAndOwn(py_item, &itemp, 
                  $descriptor(SWIG_SHARED_PTR_QNAMESPACE::shared_ptr< dolfin::TYPE > *), 0, &newmem);
-        if (SWIG_IsOK(res))
-        {
-           tmp_vec.push_back(reinterpret_cast<
-              SWIG_SHARED_PTR_QNAMESPACE::shared_ptr<dolfin::TYPE> *>(itemp)->get() );
-        }
+	if (SWIG_IsOK(res)){
+	  // If we need to release memory
+	  if (newmem & SWIG_CAST_NEW_MEMORY){
+	    tempshared = *reinterpret_cast< SWIG_SHARED_PTR_QNAMESPACE::shared_ptr<dolfin::TYPE> * >(itemp);
+	    delete reinterpret_cast< SWIG_SHARED_PTR_QNAMESPACE::shared_ptr< dolfin::TYPE > * >(itemp);
+	    arg = const_cast< dolfin::TYPE * >(tempshared.get());
+	  }
+	  else {
+	    arg = const_cast< dolfin::TYPE * >(reinterpret_cast< SWIG_SHARED_PTR_QNAMESPACE::shared_ptr< dolfin::TYPE > * >(itemp)->get());
+	  }
+	  tmp_vec.push_back(arg);
+	}
         else
         {
            SWIG_exception(SWIG_TypeError, "list of TYPE expected (Bad conversion)");
@@ -575,13 +581,13 @@ IN_TYPEMAP_STD_VECTOR_OF_POINTERS(TYPE,const,const)
   }
 }
 %enddef
-\end{c++}
+\end{swigcode}
 In the typemap, we first check that we get a Python list. We then iterate
 over the items and try to acquire the specified C++ object by converting
 the Python object to the underlying C++ pointer. This is accomplished by:
-\begin{c++}
+\begin{swigcode}
 res = SWIG_ConvertPtrAndOwn(py_item, &itemp, $descriptor(dolfin::TYPE *), 0, &newmem);
-\end{c++}
+\end{swigcode}
 %$ here to fool emacs...
 If the conversion is successful we push the C++ pointer to the \emp{tmp\_vec}. If the conversion fails we try to acquire a \emp{shared\_ptr} version of the C++ object instead. If neither of the two conversions succeed we raise an error.
 
@@ -592,18 +598,18 @@ commonly used both as input and output of functions. In Python, output
 should be returned. 
 The following call to the \emp{GenericMatrix::getrow} method   illustrates
 the difference between C++ and Python. The C++ signature is:
-\begin{c++}
+\begin{swigcode}
 GenericMatrix::getrow(dolfin::uint row, std::vector<uint>& columns, std::vector<double>& values)
-\end{c++}
+\end{swigcode}
 Here, the sparsity pattern associated with row number \emp{row} is filled
 into the \emp{columns} and \emp{values} vectors. 
 In Python a corresponding call should look like:
 \begin{python}
 columns, values = A.getrow(row)
 \end{python}
-To obtain the desired Python behaviour we employ 
+To obtain the desired Python behavior we employ 
 argout-typemaps. The following typemap macro defines such typemaps:   
-\begin{c++}
+\begin{swigcode}
 %define ARGOUT_TYPEMAP_STD_VECTOR_OF_PRIMITIVES(TYPE, TYPE_UPPER, ARG_NAME, NUMPY_TYPE)
 // In typemap removing the argument from the expected in list
 %typemap (in,numinputs=0) std::vector<TYPE>& ARG_NAME (std::vector<TYPE> vec_temp)
@@ -630,7 +636,7 @@ argout-typemaps. The following typemap macro defines such typemaps:
   // If the result is set by another out typemap build a tuple of arguments
   else
   {
-    // If the the argument is set but is not a tuple make one and put the result in it
+    // If the argument is set but is not a tuple make one and put the result in it
     if (!PyTuple_Check($result))
     {
       o1 = $result;
@@ -646,7 +652,7 @@ argout-typemaps. The following typemap macro defines such typemaps:
   }
 }
 %enddef
-\end{c++}
+\end{swigcode}
 %$ emacs gets confused
 The macro begins by defining an in-typemap that removes the output argument
 and instantiates the \emp{std::vector} that will be passed as argument to
@@ -663,11 +669,11 @@ As mentioned earlier, the file \emp{kernel\_module.i}, generated by
 The associated script \emp{generate\_docstrings.py} generates the Python
 docstrings extracted from comments in the C++ documentation.  
 The comments are transformed into SWIG docstring directives like:
-\begin{c++}
+\begin{swigcode}
 %feature("docstring")  dolfin::Data::ufc_cell "
 Return current UFC cell (if available)
 ";
-\end{c++}
+\end{swigcode}
 and saved to a SWIG interface file \emp{docstrings.i}. The
 \emp{docstrings.i} file is included from the main \emp{dolfin.i} file.
 Note that the \emp{kernel\_module.i} and \emp{docstrings.i} files are not
@@ -697,7 +703,7 @@ mesh.coordinates()[:,0] += 1
 To obtain this functionality, the \emp{Mesh} class has been extended  
 with a function \emp{coordinates} that
 returns a \numpy array. This is obtained by the following code in \emp{mesh\_pre.i}:
-\begin{c++}
+\begin{swigcode}
 %extend dolfin::Mesh {
   PyObject* coordinates() {
     int m = self->num_vertices();
@@ -711,13 +717,13 @@ returns a \numpy array. This is obtained by the following code in \emp{mesh\_pre
 }
 ...
 %ignore dolfin::Mesh::coordinates;
-\end{c++}
+\end{swigcode}
 This function wraps a 2 dimensional \numpy array around 
 the coordinates obtained from the mesh, using the macro 
 \emp{MAKE\_ARRAY}. In addition, the original \emp{coordinates}  function
 is ignored using the \emp{\%ignore} directive. The
 \emp{MAKE\_ARRAY} macro looks like:
-\begin{c++}
+\begin{swigcode}
 %define MAKE_ARRAY(dim_size, m, n, dataptr, TYPE)
   npy_intp adims[dim_size];
 
@@ -729,7 +735,7 @@ is ignored using the \emp{\%ignore} directive. The
   if ( array == NULL ) return NULL;
   PyArray_INCREF(array);
 % enddef
-\end{c++}
+\end{swigcode}
 The macro takes five arguments. The \emp{dim\_size}, \emp{m}, and \emp{n}
 arguments set the dimensions of the \numpy array. The \emp{dataptr} is a
 pointer that points to the first element of the underlying contiguous array
@@ -741,7 +747,7 @@ will not delete the data when the \numpy array is deleted.
 This prevents corruption of data when the \numpy array is deleted. 
 
 In a similar fashion, we use the \emp{MAKE\_}\emp{ARRAY} macro to wrap the connectivity information to Python. This is done with the following SWIG directives in the \emp{mesh\_pre.i} files.
-\begin{c++}
+\begin{swigcode}
 %extend dolfin::MeshConnectivity {
   PyObject* __call__() {
     int m = self->size();
@@ -753,34 +759,43 @@ In a similar fashion, we use the \emp{MAKE\_}\emp{ARRAY} macro to wrap the conne
   }
   ...
 }
-\end{c++}
+\end{swigcode}
 Here, we extend the C++ extension layer of the
 \emp{dolfin::}\emp{MeshConnectivity} class with a \emp{\_\_call\_\_}
 method. The method returns all connections between any two types of topological dimensions in the mesh.
 
 In \emp{mesh\_pre.i}, we also declare that it should be possible to subclass SubDomain in Python. This is done using the \emp{\%director} directive.
-\begin{c++}
+\begin{swigcode}
 %feature("director") dolfin::SubDomain;
-\end{c++}
+\end{swigcode}
 To avoid code bloat, this feature is only included for certain classes.
-The following typemap enables seemless integration of
+The following typemap enables seamless integration of
 \numpy array and the \emp{Array<double>\&} in  
 the \emp{inside} and \emp{map} methods. 
+\begin{swigcode}
+%typemap(directorin) const dolfin::Array<double>& {
+  npy_intp dims[1] = {$1_name.size()};
+  double * data = const_cast<double*>($1_name.data().get());
+  $input = PyArray_SimpleNewFromData(1, dims, NPY_DOUBLE, reinterpret_cast<char *>(data));
+ }
+\end{swigcode}%$ To fool emacs
+Even if it by concept and name is an \textit{in}-typemap, one can look at it as an out-typemap
+(since it is a typemap for a callback function). SWIG needs to wrap the arguments that the implemented \emp{inside} or \emp{map} method in Python are called with. The above typemaps are inserted in the \emp{inside} and \emp{map} methods of the SWIG created C++ director class, which is a sub class of \emp{dolfin::SubDomain}.
 
 \dolfin comes with a \emp{Mesh}\-\emp{Enitity}\-\emp{Iterator} class. This
 class lets a user iterate over a given \emp{MeshEntity}: a \emp{cell},
 a \emp{vertex} and so forth. The iterators are mapped to Python by the
 increment and de-reference operators in \emp{MeshEnitityIterator}. This
 enabling is done by renaming these operators in \emp{mesh\_pre.i}:
-\begin{c++}
+\begin{swigcode}
 %rename(_increment) dolfin::MeshEntityIterator::operator++;
 %rename(_dereference) dolfin::MeshEntityIterator::operator*;
-\end{c++}
+\end{swigcode}
 In \emp{mesh\_post.i}, the Python iterator
 protocol (\emp{\_\_iter\_\_} and \emp{next}) is implemented for the
 \emp{MeshEnitityIterator} class as
 follows:
-\begin{c++}
+\begin{swigcode}
 %extend dolfin::MeshEntityIterator {
 %pythoncode
 %{
@@ -798,7 +813,7 @@ def next(self):
   return self._dereference()
 %}
 }
-\end{c++}
+\end{swigcode}
 We also rename the iterators to \emp{vertices} for the \emp{VertexIterator}, \emp{cells} for \emp{CellIterator}, and so forth. Iteration over a certain mesh entity in Python is then done by:
 \begin{python}
 for cell in cells(mesh):
@@ -808,8 +823,8 @@ for cell in cells(mesh):
 \paragraph{The \emp{la} module.}
 The Python interface of the vector and matrix classes  in the \emp{la}
 module is heavily specialized, because we want the interface to be intuitive and integrate nicely with \numpy.
-First, all of the implemented C++ operators, just like we did for the \emp{operator+=()} in the \emp{Array} example above. This is done in the \emp{la\_pre.i} file:
-\begin{c++}
+First, all of the implemented C++ operators are ignored, just like we did for the \emp{operator+=()} in the \emp{Array} example above. This is done in the \emp{la\_pre.i} file:
+\begin{swigcode}
 %ignore dolfin::GenericVector::operator[];
 %ignore dolfin::GenericVector::operator*=;
 %ignore dolfin::GenericVector::operator/=;
@@ -817,22 +832,22 @@ First, all of the implemented C++ operators, just like we did for the \emp{opera
 %ignore dolfin::GenericVector::operator-=;
 
 %rename(_assign) dolfin::GenericVector::operator=;
-\end{c++}
+\end{swigcode}
 Here, we only ignore the virtual operators in the base class
 \emp{GenericVector}, because SWIG only 
 implements a  Python version of a virtual method in the base class. 
 Only the base class implementation is needed since 
 a method call in a derived Python class ends up in the 
-corrresponding Python base class. The base class in Python hands the call
+corresponding Python base class. The base class in Python hands the call
 over to the corresponding base class call in C++, which ends up in the corresponding
 derived C++ class. 
 Hence, when we ignore the above mentioned
 operators in the base class,  we also ignore the same operators in the derived classes. 
-Finally, we first rename the assignment operator to \emp{\_assign}. The \emp{\_assign} operator will be used by
-the \emp{slice} operator implemented in \emp{la\_post.i} below.
+Finally, we rename the assignment operator to \emp{\_assign}. The \emp{\_assign} operator will be used by
+the \emp{slice} operator implemented in \emp{la\_post.i}, see below.
 
-The following code snippet from \emp{la\_post.i} shows how two special methods in the Python interface of \emp{GenericVector} are implemented:
-\begin{c++}
+The following code snippet from \emp{la\_post.i} shows how the special method \emp{\_\_mul\_\_} in the Python interface of \emp{GenericVector} is implemented:
+\begin{swigcode}
 %extend dolfin::GenericVector {
   void _scale(double a)
   {(*self)*=a;}
@@ -855,7 +870,7 @@ The following code snippet from \emp{la\_post.i} shows how two special methods i
         return NotImplemented
     ...
 %} }
-\end{c++}
+\end{swigcode}
 We first expose \emp{operator*=} to Python by implementing corresponding
 hidden methods, the \emp{\_scale} method for scalars and the
 \emp{\_vec\_mul} method for other vectors. These methods are then used in
@@ -901,7 +916,7 @@ correct helper functions.
 \section{JIT Compiling of \ufl forms, \emp{Expressions} and \emp{SubDomains}}
 PyDOLFIN makes extensive use of just in time (JIT) compilation; that is code that is
 compiled, linked and imported into Python using Instant, see
-Chapter~\ref{chap:wilbers}. This process is facilitated by employing the
+Chapter~\ref{chap:wilbers}. This process is facilitated by employing
 the form compilers \ffc or \sfc that translates \ufl code into \ufc code. 
 In a similar fashion in PyDOLFIN enables JIT compiling of \emp{Expression}s
 and \emp{SubDomain}s.  
@@ -917,14 +932,14 @@ f = MyExpression()
 \end{python}
 Here, \emp{f} will be a sub class of both \emp{ufl.Function} and
 \emp{cpp.Expression}.  The second alternative is to instantiate the \emp{Expression} class directly:
-\begin{c++}
+\begin{python}
 f = Expression("10*exp(-(pow(x[0] - 0.5, 2) + pow(x[1] - 0.5, 2)) / 0.02)")
-\end{c++}
+\end{python}
 This example creates a scalar \emp{Expression}. Vector valued and matrix
 valued expressions can also be created. As in the first example, 
 \emp{f} will be a sub class of \emp{ufl.Function}. But it will not
 inherit from \emp{cpp.Expression}. 
-Instead, we create C++ code that inherit from \emp{Expression} and implements the \emp{eval} method. 
+Instead, we create a sub class in C++ that inherit from \emp{dolfin::Expression} and implements the \emp{eval} method.
 The generated code looks like:
 \begin{c++}
 class Expression_700475d2d88a4982f3042522e5960bc2: public Expression{
@@ -943,7 +958,7 @@ to compile and link a Python module from the generated code. The class made
 by Instant is imported into Python and used to dynamically construct a class 
 that inherits the generated class together with \emp{ufl.Function} and \emp{Expression}. 
 Dynamic creation of classes in Python is done using so called meta-classes. 
-In a similar fashion,  PyDOLFIN provides functionality to construct C++
+In a similar fashion, PyDOLFIN provides functionality to construct C++
 code and JIT compile sub classes of \emp{SubDomain}.
 
 
@@ -956,18 +971,18 @@ we will show, mixed language applications can be debugged in much of the same wa
 as compiled languages. 
 
 Before starting the debugger, you should make sure that your library, 
-or the relavant parts of it, 
+or the relevant parts of it, 
 is compiled with the debugging on. With GCC this is done with the \emp{-g}
 option. The additional debugging information in the code slows down 
 the performance. Therefore, \dolfin\ is by default not compiled with
 \emp{-g}.   
 After compiling the code with debugging information, you may start 
 Python in \citet{www:gdb}, the GNU Project Debugger, as follows:     
-\begin{c++}
+\begin{bash}
 gdb python
 (gdb) run
 ...
-\end{c++}
+\end{bash}
 The problem with GDB is that only one thread is running. This means that
 you will not be able to set break points and so on once you have started
 the Python interpreter.  
@@ -976,15 +991,15 @@ However, \citet{www:ddd}, the Data Display Debugger, facilitates running the deb
 interpreter in two different threads. That is, you will have two interactive
 threads, one debugger and the Python interpreter,  during your debugging
 session. The DDD debugger is started as:    
-\begin{c++}
+\begin{bash}
 ddd python
-\end{c++}
+\end{bash}
 The crucial next step is to start the Python session in a separate
 execution window by clicking on \emp{View->Execution Window}. 
-Then you start the Python sesssion: 
-\begin{c++}
+Then you start the Python session: 
+\begin{bash}
 (gdb) run
-\end{c++}
+\end{bash}
 After importing for your module you may click or search (using the
 \emp{Lookup} field)  through the  source code  
 to  set breakpoints, print variables and so on. 
@@ -997,7 +1012,7 @@ valgrind --leak-check=full python test_script.py
 Valgrind also provides various profilers for performance testing. 
 
 \paragraph{Acknowledgments.}
-The authors are very thankful to Johan Jansson who initiated PyDolfin and 
+The authors are very thankful to Johan Jansson who initiated PyDOLFIN and 
 to Ola Skavhaug and Martin S. Aln\ae s who have contributed significantly to
 the development.
 Finally, Marie Rognes has improved the language in this chapter significantly. 
