--- a/unfinished/mardal-2/chapter.tex
+++ b/unfinished/mardal-2/chapter.tex
@@ -152,8 +152,8 @@ destroyed after the call to \emp{add()}. When the last \emp{a+=a} is
 performed the underlying C++ object is already destroyed. This happens
 because the SWIG generated \emp{\_\_iadd\_\_} method returns a new Python
 object. This is illustrated by the different values obtained from the
-\emp{id()} function\footnote{Taking \emp{id} of a Python object returns a
-unique reference to that object.}. The last two calls to \emp{id(b)}
+\emp{id()} function\footnote{The \emp{id} function returns a
+unique integer idenifying the object.}. The last two calls to \emp{id(b)}
 return different numbers, which means that a new Python object is
 returned by the SWIG generated \emp{\_\_iadd\_\_} method. The second
 \emp{b} object is local in the \emp{add} function and 
