minor updates from spellchecker and proofreader.

--- a/unfinished/alnes-3/chapter.tex
+++ b/unfinished/alnes-3/chapter.tex
@@ -14,8 +14,8 @@ SyFi is a framework for defining finite elements symbolically, using the
 C++ library GiNaC~\citep{BauerFrinkKreckel2000} and its Python interface
 Swiginac~\citep{SkavhaugCertik2009}.  
 In many respects, SyFi is the equivalent of \fiat,
-   Chapter~\ref{chap:kirby-2}, whereas SFC corresponds to \ffc,
-    see Chapter\ref{chap:logg-1}. SyFi and SFC comes with
+Chapter~\ref{chap:kirby-2}, whereas SFC corresponds to \ffc,
+see Chapter~\ref{chap:logg-1}. SyFi and SFC comes with
 an extensive manual \citep{AlnaesMardal2009a} and can be found on the \fenics\ webpage. 
 SFC can be used in \fenics\ as a form compiler. Similar to \ffc\ it
 translates \ufl\ code (see Chapter~\ref{chap:alnes-1}) 
