--- a/TODO
+++ b/TODO
@@ -35,5 +35,6 @@ instead of
 \end{c++}
 
 Things to discuss
+* Fix width of C++ and Python code environments, seem different
 * Use \toprule, \midrule, \bottomrule in tables
 * Should there be , after and?
