--- a/book.tex
+++ b/book.tex
@@ -42,7 +42,7 @@
 
 \part{Methodology}
 
-%%%\fenicsinput{kirby-7}
+\fenicsinput{kirby-7}
 \fenicsinput{kirby-6}
 %%%\fenicsinput{kirby-1}
 \fenicsinput{kirby-5}
