update reference and added index to Brezzi condition

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5687,7 +5687,10 @@
   journal = {Numerical Linear Algebra with Applications},
   year = {2011},
   url = {http://dx.doi.org/10.1002/nla.716},
-  note = {To appear}
+  volume = {18},
+  pages = {1--40},
+  number = {1},
+
 }
 
 @ARTICLE{MardalWinther2006,
